--- a/account/index.html
+++ b/account/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    Account
+    <h1>Look into the console :D</h1>
   </body>
   <script src="script.js"></script>
 </html>
